sas.output
Grammar

    0 $accept: input $end

    1 input: statements

    2 statements: statement
    3           | statements statement

    4 statement: if_statement
    5          | assign_statement

    6 if_statement: IF c_expr THEN then_clause
    7             | IF c_expr THEN then_clause ELSE else_clause

    8 c_expr: expr COMPARISON expr
    9       | expr '=' expr
   10       | in_clause
   11       | c_expr AND c_expr
   12       | c_expr OR c_expr

   13 in_clause: expr in_op '(' in_list ')'

   14 in_op: IN
   15      | NOT IN

   16 in_list: expr
   17        | in_list ',' expr

   18 expr: NUMBER
   19     | STRING
   20     | ID
   21     | expr '+' expr
   22     | expr '-' expr
   23     | expr '/' expr
   24     | expr '*' expr
   25     | '(' expr ')'

   26 then_clause: statement
   27            | DO ';' statements END ';'

   28 assign_statement: ID '=' expr ';'

   29 else_clause: statement
   30            | DO ';' statements END ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 25
')' (41) 13 25
'*' (42) 24
'+' (43) 21
',' (44) 17
'-' (45) 22
'/' (47) 23
';' (59) 27 28 30
'=' (61) 9 28
error (256)
IF (258) 6 7
THEN (259) 6 7
ELSE (260) 7
DO (261) 27 30
END (262) 27 30
IN (263) 14 15
OR (264) 12
AND (265) 11
NOT (266) 15
STRING (267) 19
NUMBER (268) 18
COMPARISON (269) 8
ID (270) 20 28


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
input (26)
    on left: 1, on right: 0
statements (27)
    on left: 2 3, on right: 1 3 27 30
statement (28)
    on left: 4 5, on right: 2 3 26 29
if_statement (29)
    on left: 6 7, on right: 4
c_expr (30)
    on left: 8 9 10 11 12, on right: 6 7 11 12
in_clause (31)
    on left: 13, on right: 10
in_op (32)
    on left: 14 15, on right: 13
in_list (33)
    on left: 16 17, on right: 13 17
expr (34)
    on left: 18 19 20 21 22 23 24 25, on right: 8 9 13 16 17 21 22
    23 24 25 28
then_clause (35)
    on left: 26 27, on right: 6 7
assign_statement (36)
    on left: 28, on right: 5
else_clause (37)
    on left: 29 30, on right: 7


state 0

    0 $accept: . input $end

    IF  shift, and go to state 1
    ID  shift, and go to state 2

    input             go to state 3
    statements        go to state 4
    statement         go to state 5
    if_statement      go to state 6
    assign_statement  go to state 7


state 1

    6 if_statement: IF . c_expr THEN then_clause
    7             | IF . c_expr THEN then_clause ELSE else_clause

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    c_expr     go to state 12
    in_clause  go to state 13
    expr       go to state 14


state 2

   28 assign_statement: ID . '=' expr ';'

    '='  shift, and go to state 15


state 3

    0 $accept: input . $end

    $end  shift, and go to state 16


state 4

    1 input: statements .
    3 statements: statements . statement

    IF  shift, and go to state 1
    ID  shift, and go to state 2

    $default  reduce using rule 1 (input)

    statement         go to state 17
    if_statement      go to state 6
    assign_statement  go to state 7


state 5

    2 statements: statement .

    $default  reduce using rule 2 (statements)


state 6

    4 statement: if_statement .

    $default  reduce using rule 4 (statement)


state 7

    5 statement: assign_statement .

    $default  reduce using rule 5 (statement)


state 8

   19 expr: STRING .

    $default  reduce using rule 19 (expr)


state 9

   18 expr: NUMBER .

    $default  reduce using rule 18 (expr)


state 10

   20 expr: ID .

    $default  reduce using rule 20 (expr)


state 11

   25 expr: '(' . expr ')'

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    expr  go to state 18


state 12

    6 if_statement: IF c_expr . THEN then_clause
    7             | IF c_expr . THEN then_clause ELSE else_clause
   11 c_expr: c_expr . AND c_expr
   12       | c_expr . OR c_expr

    THEN  shift, and go to state 19
    OR    shift, and go to state 20
    AND   shift, and go to state 21


state 13

   10 c_expr: in_clause .

    $default  reduce using rule 10 (c_expr)


state 14

    8 c_expr: expr . COMPARISON expr
    9       | expr . '=' expr
   13 in_clause: expr . in_op '(' in_list ')'
   21 expr: expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '/' expr
   24     | expr . '*' expr

    IN          shift, and go to state 22
    NOT         shift, and go to state 23
    COMPARISON  shift, and go to state 24
    '+'         shift, and go to state 25
    '-'         shift, and go to state 26
    '*'         shift, and go to state 27
    '/'         shift, and go to state 28
    '='         shift, and go to state 29

    in_op  go to state 30


state 15

   28 assign_statement: ID '=' . expr ';'

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    expr  go to state 31


state 16

    0 $accept: input $end .

    $default  accept


state 17

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


state 18

   21 expr: expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '/' expr
   24     | expr . '*' expr
   25     | '(' expr . ')'

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28
    ')'  shift, and go to state 32


state 19

    6 if_statement: IF c_expr THEN . then_clause
    7             | IF c_expr THEN . then_clause ELSE else_clause

    IF  shift, and go to state 1
    DO  shift, and go to state 33
    ID  shift, and go to state 2

    statement         go to state 34
    if_statement      go to state 6
    then_clause       go to state 35
    assign_statement  go to state 7


state 20

   12 c_expr: c_expr OR . c_expr

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    c_expr     go to state 36
    in_clause  go to state 13
    expr       go to state 14


state 21

   11 c_expr: c_expr AND . c_expr

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    c_expr     go to state 37
    in_clause  go to state 13
    expr       go to state 14


state 22

   14 in_op: IN .

    $default  reduce using rule 14 (in_op)


state 23

   15 in_op: NOT . IN

    IN  shift, and go to state 38


state 24

    8 c_expr: expr COMPARISON . expr

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    expr  go to state 39


state 25

   21 expr: expr '+' . expr

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    expr  go to state 40


state 26

   22 expr: expr '-' . expr

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    expr  go to state 41


state 27

   24 expr: expr '*' . expr

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    expr  go to state 42


state 28

   23 expr: expr '/' . expr

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    expr  go to state 43


state 29

    9 c_expr: expr '=' . expr

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    expr  go to state 44


state 30

   13 in_clause: expr in_op . '(' in_list ')'

    '('  shift, and go to state 45


state 31

   21 expr: expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '/' expr
   24     | expr . '*' expr
   28 assign_statement: ID '=' expr . ';'

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28
    ';'  shift, and go to state 46


state 32

   25 expr: '(' expr ')' .

    $default  reduce using rule 25 (expr)


state 33

   27 then_clause: DO . ';' statements END ';'

    ';'  shift, and go to state 47


state 34

   26 then_clause: statement .

    $default  reduce using rule 26 (then_clause)


state 35

    6 if_statement: IF c_expr THEN then_clause .
    7             | IF c_expr THEN then_clause . ELSE else_clause

    ELSE  shift, and go to state 48

    $default  reduce using rule 6 (if_statement)


state 36

   11 c_expr: c_expr . AND c_expr
   12       | c_expr . OR c_expr
   12       | c_expr OR c_expr .

    AND  shift, and go to state 21

    $default  reduce using rule 12 (c_expr)


state 37

   11 c_expr: c_expr . AND c_expr
   11       | c_expr AND c_expr .
   12       | c_expr . OR c_expr

    $default  reduce using rule 11 (c_expr)


state 38

   15 in_op: NOT IN .

    $default  reduce using rule 15 (in_op)


state 39

    8 c_expr: expr COMPARISON expr .
   21 expr: expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '/' expr
   24     | expr . '*' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 8 (c_expr)


state 40

   21 expr: expr . '+' expr
   21     | expr '+' expr .
   22     | expr . '-' expr
   23     | expr . '/' expr
   24     | expr . '*' expr

    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 21 (expr)


state 41

   21 expr: expr . '+' expr
   22     | expr . '-' expr
   22     | expr '-' expr .
   23     | expr . '/' expr
   24     | expr . '*' expr

    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 22 (expr)


state 42

   21 expr: expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '/' expr
   24     | expr . '*' expr
   24     | expr '*' expr .

    $default  reduce using rule 24 (expr)


state 43

   21 expr: expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '/' expr
   23     | expr '/' expr .
   24     | expr . '*' expr

    $default  reduce using rule 23 (expr)


state 44

    9 c_expr: expr '=' expr .
   21 expr: expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '/' expr
   24     | expr . '*' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 9 (c_expr)


state 45

   13 in_clause: expr in_op '(' . in_list ')'

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    in_list  go to state 49
    expr     go to state 50


state 46

   28 assign_statement: ID '=' expr ';' .

    $default  reduce using rule 28 (assign_statement)


state 47

   27 then_clause: DO ';' . statements END ';'

    IF  shift, and go to state 1
    ID  shift, and go to state 2

    statements        go to state 51
    statement         go to state 5
    if_statement      go to state 6
    assign_statement  go to state 7


state 48

    7 if_statement: IF c_expr THEN then_clause ELSE . else_clause

    IF  shift, and go to state 1
    DO  shift, and go to state 52
    ID  shift, and go to state 2

    statement         go to state 53
    if_statement      go to state 6
    assign_statement  go to state 7
    else_clause       go to state 54


state 49

   13 in_clause: expr in_op '(' in_list . ')'
   17 in_list: in_list . ',' expr

    ')'  shift, and go to state 55
    ','  shift, and go to state 56


state 50

   16 in_list: expr .
   21 expr: expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '/' expr
   24     | expr . '*' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 16 (in_list)


state 51

    3 statements: statements . statement
   27 then_clause: DO ';' statements . END ';'

    IF   shift, and go to state 1
    END  shift, and go to state 57
    ID   shift, and go to state 2

    statement         go to state 17
    if_statement      go to state 6
    assign_statement  go to state 7


state 52

   30 else_clause: DO . ';' statements END ';'

    ';'  shift, and go to state 58


state 53

   29 else_clause: statement .

    $default  reduce using rule 29 (else_clause)


state 54

    7 if_statement: IF c_expr THEN then_clause ELSE else_clause .

    $default  reduce using rule 7 (if_statement)


state 55

   13 in_clause: expr in_op '(' in_list ')' .

    $default  reduce using rule 13 (in_clause)


state 56

   17 in_list: in_list ',' . expr

    STRING  shift, and go to state 8
    NUMBER  shift, and go to state 9
    ID      shift, and go to state 10
    '('     shift, and go to state 11

    expr  go to state 59


state 57

   27 then_clause: DO ';' statements END . ';'

    ';'  shift, and go to state 60


state 58

   30 else_clause: DO ';' . statements END ';'

    IF  shift, and go to state 1
    ID  shift, and go to state 2

    statements        go to state 61
    statement         go to state 5
    if_statement      go to state 6
    assign_statement  go to state 7


state 59

   17 in_list: in_list ',' expr .
   21 expr: expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '/' expr
   24     | expr . '*' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 17 (in_list)


state 60

   27 then_clause: DO ';' statements END ';' .

    $default  reduce using rule 27 (then_clause)


state 61

    3 statements: statements . statement
   30 else_clause: DO ';' statements . END ';'

    IF   shift, and go to state 1
    END  shift, and go to state 62
    ID   shift, and go to state 2

    statement         go to state 17
    if_statement      go to state 6
    assign_statement  go to state 7


state 62

   30 else_clause: DO ';' statements END . ';'

    ';'  shift, and go to state 63


state 63

   30 else_clause: DO ';' statements END ';' .

    $default  reduce using rule 30 (else_clause)
